$Id: NEWS,v 1.682 2005-06-21 13:54:40 castaglia Exp $

-----------------------------------------------------------------------------
  More details on the bugs listed below can be found by using the bug number
  indicated in the following URL:

    http://bugs.proftpd.org/show_bug.cgi?id=N

  where `N' is the bug number.
-----------------------------------------------------------------------------

CVS
--------------------------------
- Bug 2584 - mod_sql_postgres missing end-of-comment character.
- Bug 2587 - HideNoAccess does not work for DefaultRoot/<Anonymous> logins.
- Bug 2590 - AIX uses unsigned int for ULONG_MAX, causing printf format warning.
- Bug 2591 - wrong argument type in call to pr_log_debug in mod_delay.c on AIX.
- Bug 2593 - `make install-modules' does not honour DESTDIR enviroment variable.
- Bug 2596 - STAT command can cause segfault.
- Bug 2588 - AIX requires _USE_IRS #define to use hstrerror().
- Bug 2582 - ProFTPD on Tru64 with SIA does not call sia_ses_estab().
- Added new 'dns' control to mod_ctrls_admin, for enabling/disabling
  UseReverseDNS configuration at runtime.  See doc/contrib/mod_ctrls_admin.html
  for details.
- Bug 2605 - Compiler warnings/errors about missing typecasts on HP-UX.
- Bug 2589 - Makefile in modules/ directory is not portable.
- Bug 2598 - Build system should check for duplicate module requests.
- Bug 2585 - Proftpd does not write RFC 3164 compliant messages into /dev/log.
- Bug 2601 - mod_delay sometimes delays for a long time.
- Bug 2622 - Segfault seen randomly in mod_delay.
- Bug 2578 - ProFTPD does not listen on IPv6 addresses on FreeBSD.
- Bug 2624 - "fh_data" macro collision causes compiler error on Tru64 V5.1A.
- Bug 2250 - Add ports, compiling info to FreeBSD README.
- Bug 2631 - Segfault when using RadiusAcctServer.
- Bug 2632 - Invalid application of `sizeof' to an incomplete type on AIX.
- Bug 2637 - <Limit STAT> does not work.
- Bug 2636 - Data connection failure when handling STOR does not trigger